# Graphics_Engineering_Labs

./: .gitignore  README.md
Lab 0/__MACOSX/: ._shader_example 2
Lab 0/__MACOSX/shader_example 2/: ._3d.glsl
Lab 0/shader_example 2/: 3d.glsl
Lab 1/Week 2 Example - Shaders/: CMakeLists.txt  main.cpp
Lab 1/Week 2 Example - Shaders/assets/shaders/: simple.frag  simple.vert
Lab 1/trial/: CMakeLists.txt  main.cpp
Lab 1/trial/assets/: simple.frag  simple.vert
Lab 2/: CMP3060 - Lab 2 - More Shaders + Buffers.pptx
Lab 2/Week 3 - Uniforms & Buffers/: CMakeLists.txt  main.cpp
Lab 2/Week 3 - Uniforms & Buffers/assets/shaders/: simple.frag  simple.vert
Lab 2/study/: CMakeLists.txt  main.cpp
Lab 2/study/assets/: simple.frag  simple.vert
Lab 3/Week 4 - Transforms & Depth Testing/: CMakeLists.txt  main.cpp
Lab 3/Week 4 - Transforms & Depth Testing/assets/shaders/: simple.frag  simple.vert
Lab 3/trial/: CMakeLists.txt  main.cpp
Lab 3/trial/assets/: simple.frag  simple.vert
Lab 4/study/: CMakeLists.txt  main.cpp
Lab 4/study/assets/: simple.frag  simple.vert
Lab 5/Week 5 Example - Texture & Transparency/: main.cpp
Lab 5/Week 5 Example - Texture & Transparency/assets/shaders/: simple.vert
Lab 6/FBO/: main.cpp
Lab 6/lab6/: CMakeLists.txt  main.cpp
Lab 7/Week 10 Example - Lighting/Lab7_study/: CMakeLists.txt  main.cpp  mesh.hpp  texture.hpp
Lab 7/Week 10 Example - Lighting/Lighting/: color.hpp  main.cpp
Lab 7/code/Lighting/: CMakeLists.txt  mesh.cpp
Lab 7/part1/Lab7_study/: mesh.cpp  texture.cpp
Lab 7/part2/Lighting/: main.cpp  mesh.hpp
(+8 files in other folders)
